# flax-illuminant-estimation

./: .gitattributes  .gitignore  README.md  config.yaml  config.yaml.example  pyproject.toml  requirements.txt  ruff.toml
src/data/: loader.py
src/flax_illuminant_estimation/: __init__.py  checkpoint.py  config.py  eval.py  infer.py  model.py  train.py
src/flax_illuminant_estimation/lib/: __init__.py  losses.py  trainer.py
