[project]
name = "flax-illuminant-estimation"
version = "0.1.2"
description = "A vision transformer (ViT) model for estimating illuminant color in images"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "owo93", email = "iztyle30@gmail.com" }]
dependencies = [
  "flax[cuda]>=0.12.3",
  "jax[cuda13]>=0.9.0.1",
  "orbax>=0.1.9",
  "pillow>=12.1.0",
  "pyyaml>=6.0.3",
  "rich>=14.3.2",
  "tqdm>=4.67.3",
  "typing>=3.10.0.0",
  "wandb>=0.18.0",
]

[project.scripts]
illum = "flax_illuminant_estimation:main"

[dependency-groups]
dev = [
  "ipykernel>=7.2.0",
  "ruff>=0.15.7",
]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
